added frontend and oauth, validations on endpoints, models now use gorm.Model instead of manually adding the gorm.Model properties, new make command to generate the docs
